--- a/backend/public/frontend/index.html
+++ b/backend/public/frontend/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <base href="/">
+    <base href="/frontend/">
     <title>Job Posting</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
